--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MongoDB_URL=mongodb://localhost:27017/PTCERP
+MongoDB_URL=mongodb+srv://muskanparyanicodes:lOobz3zsd1qGGZfq@ptcerp.hkty3.mongodb.net/
 JWT_SECRET=yashparyani
 NODE_ENV=development
