--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MongoDB_URL=mongodb+srv://muskanparyanicodes:<db_password>@ptcerp.hkty3.mongodb.net/?retryWrites=true&w=majority&appName=PTCERP
+MongoDB_URL=mongodb+srv://muskanparyanicodes:lOobz3zsd1qGGZfq@ptcerp.hkty3.mongodb.net/?retryWrites=true&w=majority&appName=PTCERP
 JWT_SECRET=yashparyani
 NODE_ENV=development
