--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,8 +5,8 @@
   ],
   "routes" :[
     {
-      "src" : "/(.*)",
-      "dest" : "/"
+      "src" : "/routes/(.*)",
+      "dest" : "index.js"
     }
   ]
 }
