--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,18 @@
 {
-  "version" : 2,
-  "builds" : [
-    { "src" : "*.js", "use" : "@vercel/node" }
-  ],
-  "routes" :[
+  "version": 2,
+  "builds": [
     {
-      "src" : "/routes/(.*)",
-      "dest" : "index.js"
+      "src": "index.js",
+      "use": "@vercel/node"
     }
-  ]
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
