--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -14,8 +14,8 @@
   ],
   "env": {
     "PORT": "5000",
-    "MongoDB_URL": "mongodb+srv://DeepakParyani:deepakbaba@cluster0ptcerp.ovhgf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0PTCERP"
-    "JWT_SECRET" : "yashparyani",
-    "NODE_ENV" : "development"
+    "MongoDB_URL": "mongodb+srv://DeepakParyani:deepakbaba@cluster0ptcerp.ovhgf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0PTCERP",
+    "JWT_SECRET": "yashparyani",
+    "NODE_ENV": "development"
   }
 }
